syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/services/disks/protos/create_disk_params.proto";
import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateDiskFromImageRequest {
    string SrcImageId = 1;
    CreateDiskParams Params = 2;
    string OperationCloudId = 3;
    string OperationFolderId = 4;
    bool UseDataplaneTasksForLegacySnapshots = 5;
}

message CreateDiskFromImageTaskState {
    CreateDiskFromImageRequest Request = 1;
    string TransferTaskId = 2;
    string DataplaneTaskId = 3;
}
