syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateDiskParams {
    uint64 BlocksCount = 1;
    types.Disk Disk = 2;
    uint32 BlockSize = 3;
    types.DiskKind Kind = 4;
    string CloudId = 5;
    string FolderId = 6;
    uint32 TabletVersion = 7;
    string PlacementGroupId = 8;
    types.EncryptionMode EncryptionMode = 9;
    string EncryptionKeyFilePath = 10;
    string StoragePoolName = 11;
    repeated string AgentIds = 12;
}
